<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.taxonic.carml</groupId>
	<artifactId>carml</artifactId>
	<version>0.2.3</version>
	<packaging>pom</packaging>

	<name>carml</name>
	<description>An engine to transform structured sources into RDF based on RML mappings.</description>
	<url>https://github.com/carml</url>
	<inceptionYear>2017</inceptionYear>

	<organization>
		<name>Taxonic</name>
		<url>http://www.taxonic.com</url>
	</organization>

	<developers>
		<developer>
			<id>Victor329</id>
			<name>Victor Louwerse</name>
			<email>victor.louwerse@taxonic.com</email>
		</developer>
		<developer>
			<id>pmaria</id>
			<name>Pano Maria</name>
			<email>pano.maria@gmail.com</email>
			<url>http://github.com/pmaria</url>
		</developer>
		<developer>
			<id>laurirondolo</id>
			<name>Lauri Rondolo</name>
			<email>lauri.rondolo@taxonic.com</email>
		</developer>
		<developer>
			<id>kvoskuil</id>
			<name>Ken Voskuil</name>
			<email>ken.voskuil@taxonic.com</email>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>MIT</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/carml/carml</url>
		<connection>scm:git:git@github.com:carml/carml.git</connection>
		<developerConnection>scm:git:git@github.com:carml/carml.git</developerConnection>
		<tag>v0.2.3</tag>
	</scm>

	<modules>
		<module>carml-engine</module>
		<module>carml-model</module>
		<module>carml-rdf-mapper</module>
		<module>carml-commons</module>
		<module>carml-logical-source-resolver</module>
		<module>carml-logical-source-resolver-xpath</module>
		<module>carml-logical-source-resolver-jsonpath</module>
		<module>carml-logical-source-resolver-csv</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<rdf4j.version>2.3.2</rdf4j.version>
		<log4j.version>2.8.2</log4j.version>
		<mockito.version>2.18.3</mockito.version>
	</properties>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>com.taxonic.carml</groupId>
				<artifactId>carml-engine</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.taxonic.carml</groupId>
				<artifactId>carml-model</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.taxonic.carml</groupId>
				<artifactId>carml-rdf-mapper</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.taxonic.carml</groupId>
				<artifactId>carml-commons</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.taxonic.carml</groupId>
				<artifactId>carml-logical-source-resolver</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.taxonic.carml</groupId>
				<artifactId>carml-logical-source-resolver-xpath</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.taxonic.carml</groupId>
				<artifactId>carml-logical-source-resolver-jsonpath</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.taxonic.carml</groupId>
				<artifactId>carml-logical-source-resolver-csv</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-model</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-util</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-rio-api</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-rio-turtle</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.eclipse.rdf4j</groupId>
				<artifactId>rdf4j-rio-trig</artifactId>
				<version>${rdf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.7</version>
			</dependency>

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.6</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.8.0-beta2</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-library</artifactId>
				<version>1.3</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>25.0-jre</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<profiles>
		<profile>
			<!-- TODO: temporarily disabled javadoc linting. must fix javadoc. -->
			<id>doclint-java8-disable</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>
			<properties>
				<javadoc.opts>-Xdoclint:none</javadoc.opts>
			</properties>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.7</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<!-- TODO: temporarily disabled javadoc linting. must fix javadoc. -->
								<configuration>
									<additionalparam>${javadoc.opts}</additionalparam>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>quick</id>
			<properties>
				<skipTests>true</skipTests>
				<skipITs>true</skipITs>
			</properties>
		</profile>
	</profiles>
</project>
